--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: dartnow
 description: Dart Now command line interface
-version: 0.1.3
+version: 0.1.6
 author: Kasper Peulen <kasperpeulen@gmail.com>
 homepage: https://github.com/dartnow/dartnow_cli
 environment:
@@ -17,6 +17,6 @@ dependencies:
     git:
       url: https://github.com/kasperpeulen/github.dart.git
       ref: editGist2
-  analyzer: '^0.25.2'
+  analyzer: any
   test: '^0.12.3+8'
   http: '^0.11.3'
