--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: dartnow
 description: Dart Now command line interface
-version: 0.1.12
+version: 0.2.0-dev.1
 author: Kasper Peulen <kasperpeulen@gmail.com>
 homepage: https://github.com/dartnow/dartnow_cli
 environment:
