--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: dartnow
 description: Dart Now command line interface
-version: 0.2.0-dev.1
+version: 0.2.0+3
 author: Kasper Peulen <kasperpeulen@gmail.com>
 homepage: https://github.com/dartnow/dartnow_cli
 environment:
@@ -15,7 +15,7 @@ dependencies:
   prompt: '^0.1.7'
   github:
     git:
-      url: https://github.com/kasperpeulen/github.dart.git
+      url: https://github.com/kasperpeulen/github.dart
       ref: editGist2
   analyzer: any
   test: '^0.12.3+8'
